# algorithms

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  lib.hpp  sum_of_unique.cpp  sum_of_unique.hpp
